# Telegram-Bot

./: Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
services/bot/: .dockerignore  Dockerfile  pyproject.toml
services/bot/src/: config.py  db_client.py  handlers.py  main.py
services/bot/src/clients/: db_client.py
services/bot/src/handlers/reputation/: reputation.py  texts.py
services/database/: docker-compose.yml
services/database-api/: Dockerfile  pyproject.toml
services/db_api/: pyproject.toml
services/db_api/src/: config.py  database.py  main.py  models.py  schemas.py
src/: config.py  main.py
