[tool.poetry]
name = "shpekbot"
version = "0.1.0"
description = "Telegram Bot"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"